Closed Bug 1395868 Opened 7 years ago Closed 7 years ago

fix the failure of idbcursor-continuePrimaryKey.htm

Categories

(Core :: Storage: IndexedDB, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: bevis, Assigned: bevis)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The logic of our implementation of IDBCursor.continuePrimary() is not matched to what has been specified currently the IDB v2 spec:
https://w3c.github.io/IndexedDB/#iterate-a-cursor
File this bug to fix the problem.
This patch is to fix the SQL logic to meet what's been specified in IDB spec v2:
https://w3c.github.io/IndexedDB/#iterate-a-cursor
Please check "If primaryKey is defined," statements in both "next" and "prev" sections in the spec.
Attachment #8903507 - Flags: review?(amarchesini)
Attachment #8903507 - Flags: review?(amarchesini) → review+
Pushed by btseng@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/59a2c3461e78
Fix the failure of idbcursor-continuePrimaryKey.htm. r=baku
https://hg.mozilla.org/mozilla-central/rev/59a2c3461e78
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: