Bug 1395868 - Fix the failure of idbcursor-continuePrimaryKey.htm. r=baku